hiwonder_ws/log/build_2025-07-18_20-00-08/hello_world_demo/stderr.log
  File "/home/ubuntu/hiwonder_ws/install/hello_world_demo/lib/python3.10/site-packages/hello_world_demo/hello_world.py", line 9
    def_init_(self):
                   ^
SyntaxError: invalid syntax

